[package]
name = "downloader-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"
crossterm = "0.25"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
